--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<link rel = “stylesheet” href = “/style.css” type = “text / css” />
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+ <link rel = “stylesheet” href = “style.css”/>
+</head>
+
+<body>
+  <script src="script.js"></script>
+
+ <!--
+  This script places a badge on your repl's full-browser view back to your repl's cover
+  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
+  teal, blue, blurple, magenta, pink!
+  -->
+  <script </script> 
+</body>
+
+</html>
