--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
- <link rel = “stylesheet” href = “style.css”/>
+<link rel = “stylesheet” href = “style.css” type = “text / css” />
 </head>
 
 <body>
