--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-<link rel="stylesheet" href="style.css">
+  <title>UDM</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <script src="script.js"></script>
 
  <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
