--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html>
+<div class="input-wrapper">
+  <input aria-label="Ask us anything">
+  <span class="placeholder"></span>
+</div>
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8%;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+</style>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>UDM</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
- <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script </script> 
-</body>
-
-</html>
+<div class="footer">
+  <p><a href="https://bit.ly/DokumentasiMinggu7"style="color:White;" target="_blank" >Link Dokumentasi!</a></p>
+</div>
