--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+<link rel="stylesheet" href="{{'/assets/stylesheets/custom.css' | absolute_url}}">
+</head>
 <div class="input-wrapper">
   <input aria-label="Ask us anything">
   <span class="placeholder"></span>
